# peppermint-macmail

./: .gitignore  .hgignore  Makefile
AudioRecorder/: XGAudioRecorderViewController.h  XGAudioRecorderViewController.m  XGAudioRecorderViewController.xib  XGAudioRecorderWindowController.m  XGMouseTransparrentTextField.h  XGMouseTransparrentTextField.m
Core/: XGBinding.h  XGBinding.m  XGLocalizedString.h  XGPreferences.m  XGTemporaryURL.h  XGToolbarDelegateSwizzler.h  XGToolbarDelegateSwizzler.m  XGToolbarItem.h  XGToolbarItem.m
InputDeviceMonitor/: CMakeLists.txt  XGInputDeviceMonitor.h  XGInputDeviceMonitor.m  main.m
InputDeviceMonitor/InputDeviceMonitor.xcodeproj/: project.pbxproj
InputDeviceMonitor/InputDeviceMonitor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Installer/: Introduction.rtf  Peppermint.pkgproj  postflight  preflight
Mail/: ComposeBackEnd.h  DocumentEditor.h  EditableWebMessageDocument.h  EditingMessageWebView.h  ImageResizerDelegate.h  MCActivityTarget.h  MCAttachment.h  MCMessage.h  MCMessageHeaders.h  MCMutableMessageHeaders.h  MFWebMessageDocument-Attachments.h  MailWebViewEditor.h  MessageViewer.h  NSInspectorBarClient.h  NSUserActivityDelegate.h
Peppermint/: Info.plist  XGAttachementGenerator.m  XGDocumentEditorSwizzler.h  XGDocumentEditorSwizzler.m  XGMessageViewer.h  XGMessageViewer.m  XGMessageViewerSwizzler.h  XGMessageViewerSwizzler.m  XGMessageViewerToolbarItem.m  XGPeppermint.pch  XGPeppermintPlugin.m  XGPreferences.h  XGToolbarDelegateSwizzler.h  XGToolbarDelegateSwizzler.m  (+1 more)
Peppermint.xcodeproj/: project.pbxproj
(+68 files in other folders)
